--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@ h2
     width:auto;
     height:50px;
     text-align: center; /* orizzontale */
+    padding-left:15px;
+    padding-right:15px;
     
 }
 
@@ -47,4 +49,17 @@ h2
     padding-left: 5px;
 }
 
+#bottom 
+{
+    vertical-align: bottom;
+}
 
+.col-bottom {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+.break_text {
+    text-overflow: clip;
+}
