--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h2
     background-color: none;
     
 }
+
 .row 
 {
     padding-top:20px;
@@ -63,3 +64,17 @@ h2
 .break_text {
     text-overflow: clip;
 }
+
+@media (min-width: 480px) {
+ .spazio {
+  margin-bottom: 20px; 
+}
+  }
+
+
+@media (min-width: 992px) {
+ .spazio {
+  margin-bottom: 0px; 
+}
+  }
+
