--- a/style.css
+++ b/style.css
@@ -104,6 +104,12 @@ h3
     font-size:17px;
     line-height: 300%;
 }
+  h3
+{
+    color:#488ae6;
+    font-size:11px;
+    line-height: 300%;
+}
   #r2 {
      display: none;
  }
@@ -117,3 +123,20 @@ h3
   margin-bottom: 0px;
 }
   }
+
+ul.horizontal-slide {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    white-space: nowrap;
+    overflow-x: auto;
+}
+
+ul.horizontal-slide li[class*="col"] {
+    display: inline-block;
+    float: none;
+}
+
+ul.horizontal-slide li[class*="col"]:first-child {
+    margin-left: 0;
+}
